# gr-m2k

./: CMakeLists.txt  MANIFEST.md  README.md  gnuradio-m2k.pc.in  testsync1.grc
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-m2kConfig.cmake  m2kConfig.cmake
docs/: CMakeLists.txt  README.m2k
docs/doxygen/: .gitignore  CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  m2k.tree.yml  m2k_adf4350_sink.block.yml  m2k_analog_in_converter.block.yml  m2k_analog_in_source.block.yml  m2k_analog_out_converter.block.yml  m2k_analog_out_sink.block.yml  m2k_digital_in_source.block.yml  m2k_digital_out_sink.block.yml
include/gnuradio/m2k/: CMakeLists.txt  adf4350_sink.h  analog_in_converter.h  analog_in_source.h  analog_out_converter.h  analog_out_sink.h  api.h  digital_in_source.h  mixed_signal_source.h
include/m2k/: CMakeLists.txt  adf4350_sink.h  analog_in_converter.h  analog_in_source.h  analog_out_converter.h  analog_out_sink.h  api.h  digital_in_source.h  digital_out_sink.h  mixed_signal_source.h
lib/: CMakeLists.txt  adf4350_sink_impl.cc  adf4350_sink_impl.h  analog_in_converter_impl.cc  analog_in_converter_impl.h  analog_in_source_impl.cc  analog_in_source_impl.h  analog_out_converter_impl.cc  analog_out_converter_impl.h  analog_out_sink_impl.cc  analog_out_sink_impl.h  block_communication.cc  block_communication.h  digital_in_source_impl.cc  digital_in_source_impl.h  digital_out_sink_impl.cc  digital_out_sink_impl.h  mixed_signal_source_impl.cc  mixed_signal_source_impl.cpp  mixed_signal_source_impl.h
lib/drivers/: adf4350.c  adf4350.h  spi.h
m2k-examples/: m2k_analog.grc  m2k_digital.grc  m2k_fm.grc
python/: CMakeLists.txt  __init__.py  qa_analog_in_source.py  qa_analog_out_sink.py
python/m2k/: CMakeLists.txt  __init__.py
python/m2k/bindings/: CMakeLists.txt  adf4350_sink_python.cc  analog_in_converter_python.cc  analog_in_source_python.cc  analog_out_converter_python.cc  analog_out_sink_python.cc  digital_in_source_python.cc  failed_conversions.txt  mixed_signal_source_python.cc  python_bindings.cc
python/m2k/bindings/docstrings/: adf4350_sink_pydoc_template.h  analog_in_converter_pydoc_template.h  analog_in_source_pydoc_template.h  analog_out_converter_pydoc_template.h  analog_out_sink_pydoc_template.h  digital_in_source_pydoc_template.h  mixed_signal_source_pydoc_template.h
swig/: CMakeLists.txt  m2k_swig.i
